--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@material-tailwind/react": "^2.1.9",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.3",
+    "email-validator": "^2.0.4",
     "firebase": "^10.12.5",
     "heroicons": "^2.1.5",
     "react": "^18.3.1",
